Adding sample "vvb.ini" files

--- a/vvb_samples/bohwaz.net_vvb.ini
+++ b/vvb_samples/bohwaz.net_vvb.ini
@@ -1,16 +1,17 @@
 [VroumVroumBlogConfig]
 
 ; Source Site title
-SITE_TITLE=""
+SITE_TITLE="~bohwaz/autoblog/"
 
 ; Source Site description (you can include HTML code here)
-SITE_DESCRIPTION=""
+SITE_DESCRIPTION="Ce site n'est pas le site officiel de bohwaz.<br />
+C'est un blog automatisé qui réplique les articles de <a href="http://bohwaz.net/">bohwaz.net</a>"
 
 ; Source Site URL
-SITE_URL=
+SITE_URL=http://bohwaz.net/
 
 ; Source Feed URL
-FEED_URL=
+FEED_URL=http://blogs.kd2.org/bohwaz/rss.php
 
 ; ---------------------------------------------------------------------------
 ; The following options are optional, if you don't put them in the .ini file,
@@ -21,7 +22,7 @@ FEED_URL=
 ; Use * as wildcard (eg. *.bohwaz.net)
 ; If option is not present, the host from SITE_URL will be used
 ; If option is present and empty, no media will ever be mirrored
-DOWNLOAD_MEDIA_FROM=
+DOWNLOAD_MEDIA_FROM=blogs.kd2.org,i.kd2.org,bohwaz.net
 
 ; Which media files extensions are allowed to be mirrored
 ; use a single comma a separator
@@ -29,11 +30,11 @@ DOWNLOAD_MEDIA_FROM=
 DOWNLOAD_MEDIA_TYPES=jpg,jpeg,png,gif,pdf
 
 ; Number of articles to display on each page (default is 10)
-ARTICLES_PER_PAGE=
+ARTICLES_PER_PAGE=10
 
 ; Number of seconds before checking the source feed for new stuff
 ; (default is 3600 = 1 hour)
-UPDATE_INTERVAL=
+UPDATE_INTERVAL=3600
 
 ; Number of seconds before giving up for reaching the source feed
 ; (If source is slow, you should raise this value)
