Default empty vvb.ini file

--- a/vvb.ini
+++ b/vvb.ini
@@ -21,7 +21,7 @@ FEED_URL=
 ; Use * as wildcard (eg. *.bohwaz.net)
 ; If option is not present, the host from SITE_URL will be used
 ; If option is present and empty, no media will ever be mirrored
-DOWNLOAD_MEDIA_FROM=
+; DOWNLOAD_MEDIA_FROM=
 
 ; Which media files extensions are allowed to be mirrored
 ; use a single comma a separator
